--- a/examen.html
+++ b/examen.html
@@ -19,37 +19,19 @@
                                         <span>Es noticia:</span>
                                     </li>
                                     <li class="list-group-item">
-                                        <a href="#" class="listtext ">Lorem, ipsum dolor.</a>
+                                        <a href="#" class="listtext ">aki anduviera una cosa.</a>
                                     </li>
                                     <li class="list-group-item">
                                         /
                                     </li>
                                     <li class="list-group-item">
-                                        <a href="#" class="listtext">Lorem ipsum dolor sit.</a>
+                                        <a href="#" class="listtext">aki anduviera una cosa.</a>
                                     </li>
                                     <li class="list-group-item">
                                         /
                                     </li>
                                     <li class="list-group-item">
-                                        <a href="#" class="listtext">Lorem, ipsum.</a>
-                                    </li>
-                                    <li class="list-group-item">
-                                        /
-                                    </li>
-                                    <li class="list-group-item">
-                                        <a href="#" class="listtext ">Lorem, ipsum dolor.</a>
-                                    </li>
-                                    <li class="list-group-item">
-                                        /
-                                    </li>
-                                    <li class="list-group-item">
-                                        <a href="#" class="listtext">Lorem ipsum dolor sit.</a>
-                                    </li>
-                                    <li class="list-group-item">
-                                        /
-                                    </li>
-                                    <li class="list-group-item">
-                                        <a href="#" class="listtext">Lorem, ipsum.</a>
+                                        <a href="#" class="listtext">aki anduviera una cosa.</a>
                                     </li>
                                     <li class="list-group-item">
                                         /
@@ -61,7 +43,25 @@
                                         /
                                     </li>
                                     <li class="list-group-item">
-                                        <a href="#" class="listtext">Lorem ipsum dolor sit.</a>
+                                        <a href="#" class="listtext">aki anduviera una cosa.</a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        /
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#" class="listtext">aki anduviera una cosa.</a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        /
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#" class="listtext ">aki anduviera una cosa.</a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        /
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#" class="listtext">aki anduviera una cosa.</a>
                                     </li>
                                 </ul>
                             </div>
